--- a/staff.html
+++ b/staff.html
@@ -308,11 +308,9 @@
                         <a href="https://lloydehs.edlioadmin.com/apps/login/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/Edlio-LL.png" alt="Edlio Website Administration - Lloyde"></button></a>
                     </div>
                     <div>
-    
                         <a href="https://lawndalehigh.edlioadmin.com/apps/login/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/Edlio-LW.png" alt="Edlio Website Administration - Lawndale"></button></a>
                         <a href="https://hhscougars.edlioadmin.com/apps/login/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/Edlio-HW.png" alt="Edlio Website Administration - Hawthorne"></button></a>
                         <a href="https://leuzinger.edlioadmin.com/apps/login/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/Edlio-LZ.png" alt="Edlio Website Administration - Leuzinger"></button></a>
-    
                     </div>
                 </div>
                 <!-- /.schoolWebsitesButtonRow -->
@@ -340,8 +338,7 @@
             <i class="fa fa-arrow-up" aria-hidden="true"></i>
         </a>
     </div>
-    <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
-    <script src="js/bundle.js"></script>
+    <script src="js/bundle.js" type="text/javascript"></script>
 </body>
 
 </html>
