--- a/staff.html
+++ b/staff.html
@@ -8,6 +8,7 @@
     <meta http-equiv="content-language" content="en-us">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="description" content="Centinella Valley School District Single Sign-On (SSO) Dashboard">
+    <link rel="manifest" href="js/manifest.json">
     <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive" rel="stylesheet">
     <link href="css/grid-system.css" rel="stylesheet">
     <!-- Grid System -->
