Got service worker to run jsonFetch() and have it call the function every set interval of time using setInterval, although it is said thatservice workers have a limited lifecycle.

--- a/staff.html
+++ b/staff.html
@@ -25,7 +25,7 @@
     <link rel="shortcut icon" href="/images/favicons/favicon.ico">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="msapplication-config" content="/images/favicons/browserconfig.xml">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#1e6c93">
    
     <title>CVUHSD | Staff Portal</title>
 </head>
@@ -35,7 +35,7 @@
         <header class="navigation-bar-header">
             <nav class="navigation-bar">
                 <div class="navigation-bar-image-wrapper">
-                    <a class="navbar-logo-link" href="http://portal.centinela.k12.ca.us"><img class="img-responsive" id="navbar-logo" href="#" src="images/CV-600x600.png"></a>
+                    <a class="navbar-logo-link" href="http://portal.centinela.k12.ca.us"><img class="img-responsive" id="navbar-logo" href="#" src="images/CV-600x600-portal.png"></a>
                 </div>
                 <ul class="navigation-bar-ul">
                     <input type="checkbox" class="checkbox-hack" id="menu-toggle">
@@ -92,6 +92,16 @@
             <header class="staff-dashboard-header">
                 <h1><strong>CVUHSD</strong></h1>
                 <h2>Staff Portal</h2>
+                <button class="addToHomeScreenButton blueBG" id="addToHomeScreenButton">Add to Home Screen</button>
+                <div class="tooltip">
+                    <p>
+                        Create a shortcut to the portal app on your desktop. 
+                    </p>
+                    <p>
+                        Be notified when a service such as Destiny is down, and 
+                        conversely when it comes back up.
+                    </p>  
+                </div>
             </header>
         </div>
 
