Implement add to home screen feature to staff portal.

--- a/staff.html
+++ b/staff.html
@@ -8,7 +8,7 @@
     <meta http-equiv="content-language" content="en-us">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="description" content="Centinella Valley School District Single Sign-On (SSO) Dashboard">
-    <link rel="manifest" href="js/manifest.json">
+    <link rel="manifest" href="js/staff-manifest.json">
     <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive" rel="stylesheet">
     <link href="css/grid-system.css" rel="stylesheet">
     <!-- Grid System -->
@@ -20,7 +20,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/images/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/images/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/images/favicons/favicon-16x16.png">
-    <link rel="manifest" href="/images/favicons/site.webmanifest">
+    <!-- <link rel="manifest" href="/images/favicons/site.webmanifest"> -->
     <link rel="mask-icon" href="/images/favicons/safari-pinned-tab.svg" color="#5bbad5">
     <link rel="shortcut icon" href="/images/favicons/favicon.ico">
     <meta name="msapplication-TileColor" content="#da532c">
@@ -93,7 +93,7 @@
                 <h1><strong>CVUHSD</strong></h1>
                 <h2>Staff Portal</h2>
                 <button class="addToHomeScreenButton blueBG" id="addToHomeScreenButton">Add to Home Screen</button>
-                <div class="tooltip">
+                <div class="tooltip" id="addToHomeScreenTooltip">
                     <p>
                         Create a shortcut to the portal app on your desktop. 
                     </p>
