Update webpack config for outputting the staff.html file

--- a/staff.html
+++ b/staff.html
@@ -360,7 +360,7 @@
             <i class="fa fa-arrow-up" aria-hidden="true"></i>
         </a>
     </div>
-    <script src="js/bundle.js" type="text/javascript"></script>
+    <!-- <script src="js/bundle.js" type="text/javascript"></script> -->
 </body>
 
 </html>
