Copying images to the dist folder working. SW registration fails due to a potential font awesome link error, however,.

--- a/staff.html
+++ b/staff.html
@@ -10,12 +10,13 @@
     <meta name="description" content="Centinella Valley School District Single Sign-On (SSO) Dashboard">
     <link rel="manifest" href="js/staff-manifest.json">
     <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive" rel="stylesheet">
-    <link href="css/grid-system.css" rel="stylesheet">
+    <!-- Stylsheets commented out due to Webpack injection -->
+    <!-- <link href="css/grid-system.css" rel="stylesheet"> -->
     <!-- Grid System -->
-    <link href="css/style.css" rel="stylesheet">
+    <!-- <link href="css/style.css" rel="stylesheet"> -->
     <!-- All styling outside the grid system is done here-->
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <!-- <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"> -->
     <!-- Favicons --->
     <link rel="apple-touch-icon" sizes="180x180" href="/images/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/images/favicons/favicon-32x32.png">
