Transpiling the service worker file to ES5 appears to lead to the service worker registration error.

--- a/staff.html
+++ b/staff.html
@@ -47,7 +47,7 @@
                             <div class="bar3"></div>
                         </div>    
                     </label>
-                    <li><a href="https://www.centinela.k12.ca.us/"><i class="fa fa-home" aria-hidden="true" id="home-icon"></i>CVUHSD Home</a></li>
+                    <li><a href="https://www.centinela.k12.ca.us/">CVUHSD Home</a></li>
                     <!--<li><a href="https://portal.centinela.k12.ca.us/staff.html">Staff Portal</a></li>-->
                     <li class="mobile-collapse-links">
                         <a href="#quickLinks-blueSection">Quick Links</a>
@@ -361,7 +361,7 @@
             <i class="fa fa-arrow-up" aria-hidden="true"></i>
         </a>
     </div>
-    <!-- <script src="js/bundle.js" type="text/javascript"></script> -->
+    <!-- <script src="js/logic.js" type="text/javascript"></script> -->
 </body>
 
 </html>
