--- a/student.html
+++ b/student.html
@@ -68,6 +68,16 @@
             <header class="staff-dashboard-header">
                 <h1><strong>CVUHSD</strong></h1>
                 <h2>Student Portal</h2>
+                <button class="addToHomeScreenButton blueBG" id="addToHomeScreenButton">Add to Home Screen</button>
+                <div class="tooltip" id="addToHomeScreenTooltip">
+                    <p>
+                        Create a shortcut to the portal app on your desktop. 
+                    </p>
+                    <p>
+                        Be notified when a service such as Destiny is down, and 
+                        conversely when it comes back up.
+                    </p>  
+                </div>
             </header>
         </div>
 
@@ -229,6 +239,7 @@
             <i class="fa fa-arrow-up" aria-hidden="true"></i>
         </a>
     </div>
+     <!-- <script src="js/logic.js" type="text/javascript"></script> -->
 </body>
 
 </html>
