--- a/staff.html
+++ b/staff.html
@@ -29,7 +29,7 @@
     <meta name="theme-color" content="#1e6c93">
    
     <title>CVUHSD | Staff Portal</title>
-</head>
+<link href="css/font-awesome.min.css" rel="stylesheet"><link href="css/grid-system.css" rel="stylesheet"><link href="css/style.css" rel="stylesheet"></head>
 
 <body>
     <div class="container-fluid">
@@ -362,6 +362,6 @@
         </a>
     </div>
     <!-- <script src="js/logic.js" type="text/javascript"></script> -->
-</body>
+<script type="text/javascript" src="js/logic.bundle.js"></script></body>
 
 </html>
