--- a/student.html
+++ b/student.html
@@ -68,7 +68,7 @@
             <header class="staff-dashboard-header">
                 <h1><strong>CVUHSD</strong></h1>
                 <h2>Student Portal</h2>
-                <button class="addToHomeScreenButton blueBG" id="addToHomeScreenButton">Add to Home Screen</button>
+		<!-- <button class="addToHomeScreenButton blueBG" id="addToHomeScreenButton">Add to Home Screen</button>
                 <div class="tooltip" id="addToHomeScreenTooltip">
                     <p>
                         Create a shortcut to the portal app on your desktop. 
@@ -77,7 +77,7 @@
                         Be notified when a service such as Destiny is down, and 
                         conversely when it comes back up.
                     </p>  
-                </div>
+                </div> -->
             </header>
         </div>
 
@@ -90,20 +90,19 @@
                 </label>
             </div>
             <div class="row button-row" id="quickLinksButtonRow">
-                <div>
-                    <a href="https://powerschool.centinela.k12.ca.us/public/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/PS-student.png" alt="PowerSchool Student/Parent Portal"></button></a>
-                    <a href="https://accounts.google.com/signin/v2/sl/pwd?service=mail&amp;passive=true&amp;rm=false&amp;continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&amp;ss=1&amp;scc=1&amp;ltmpl=default&amp;ltmplcache=2&amp;emr=1&amp;osid=1&amp;flowName=GlifWebSignIn&amp;flowEntry=ServiceLogin"
-                        target="_blank"><button><img class="img-responsive" href="" src="images/buttons/gmail.png" alt="Gmail"></button></a>
-                    <a href="https://accounts.google.com/signin/v2/sl/pwd?service=wise&amp;passive=1209600&amp;osid=1&amp;continue=https%3A%2F%2Fdrive.google.com%2F&amp;followup=https%3A%2F%2Fdrive.google.com%2F&amp;emr=1&amp;flowName=GlifWebSignIn&amp;flowEntry=ServiceLogin"
-                        target="_blank"><button><img class="img-responsive" href="" src="images/buttons/google-drive.png" alt="Google Drive Button"></button></a>  
+    	    <div>
+                <a href="https://powerschool.centinela.k12.ca.us/public/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/PS-student.png" alt="PowerSchool Student/Parent Portal"></button></a>
+                <a href="https://accounts.google.com/signin/v2/sl/pwd?service=mail&amp;passive=true&amp;rm=false&amp;continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&amp;ss=1&amp;scc=1&amp;ltmpl=default&amp;ltmplcache=2&amp;emr=1&amp;osid=1&amp;flowName=GlifWebSignIn&amp;flowEntry=ServiceLogin"
+                    target="_blank"><button><img class="img-responsive" href="" src="images/buttons/gmail.png" alt="Gmail"></button></a>
+                <a href="https://accounts.google.com/signin/v2/sl/pwd?service=wise&amp;passive=1209600&amp;osid=1&amp;continue=https%3A%2F%2Fdrive.google.com%2F&amp;followup=https%3A%2F%2Fdrive.google.com%2F&amp;emr=1&amp;flowName=GlifWebSignIn&amp;flowEntry=ServiceLogin"
+                    target="_blank"><button><img class="img-responsive" href="" src="images/buttons/google-drive.png" alt="Google Drive Button"></button></a>
                 </div>
-                <div>
-                    <a href="https://centinela.instructure.com/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/canvas.png" alt="Canvas (Learning Management System)"></button></a>
-                    <a href="https://www.californiacolleges.edu/#/user-login" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/ccgi-logo.png" alt="California College Guidance Initiative" width="316px" height="100px" style="width:316px; height: 100px;"></button></a>
-                    <a href="https://docs.google.com/document/d/1f4D4dwLN4UxhEOR52Yrdgr8M9yEMAz6fFoqD7-HI9b0/edit?usp=sharing" target="_blank"><button><img class="img-responsive" width="316px" height="100px" style="width:316px; height: 100px;" href="" src="images/buttons/TechItOut_Button.png" alt="Tech It Out"></button></a>
-                </div>
-                
-            </div>
+		<div>
+		<a href="https://centinela.instructure.com/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/canvas.png" alt="Canvas (Learning Management System)"></button></a>
+            	<a href="https://www.californiacolleges.edu/#/user-login" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/ccgi-logo.png" alt="California College Guidance Initiative" width="316px" height="100px" style="width:316px; height: 100px;"></button></a>
+	     	<a href="https://docs.google.com/document/d/1f4D4dwLN4UxhEOR52Yrdgr8M9yEMAz6fFoqD7-HI9b0/edit?usp=sharing" target="_blank"><button><img class="img-responsive" width="316px" height="100px" style="width:316px; height: 100px;" href="" src="images/buttons/TechItOut_Button.png" alt="Tech It Out"></button></a>
+	     </div>
+	</div>
         </section>
 
         <section class="blue-section" id="standardStaffTools-blueSection">
@@ -245,7 +244,7 @@
             <i class="fa fa-arrow-up" aria-hidden="true"></i>
         </a>
     </div>
-     <!-- <script src="js/logic.js" type="text/javascript"></script> -->
+	<script type="text/javascript" src="js/logic.bundle.js"></script>
 </body>
 
 </html>
