Convert <div class='navigation-bar'> in NavigationBar component to a styled component.

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   </head>
-  <body>
+  <body style="font-family: Lato, sans-serif;
+                font-size: 16px;
+                background-color: #f4f7f9;
+                background-attachment: fixed;
+                background-repeat: no-repeat;
+                background-size: cover;
+                background-position: center;"
+  >
     <noscript>You need to enable JavaScript to run this web application!</noscript>
     <div id="root"></div>
     <!--
