Add more changes to server code.

--- a/public/index.html
+++ b/public/index.html
@@ -23,9 +23,9 @@
       <meta name="theme-color" content="#1e6c93">
      
       <title>CVUHSD | Staff Portal</title>
-      <link href="css/font-awesome.min.css" rel="stylesheet">
-      <link href="css/grid-system.css" rel="stylesheet">
-      <link href="css/style.css" rel="stylesheet">
+      <link href="/css/font-awesome.min.css" rel="stylesheet">
+      <link href="/css/grid-system.css" rel="stylesheet">
+      <link href="/css/style.css" rel="stylesheet">
 
       <!-- <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" /> -->
    
