--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
       <!-- <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"> -->
-      <!-- Favicons --->
+      <!-- Favicons -->
       <link rel="apple-touch-icon" sizes="180x180" href="/images/favicons/apple-touch-icon.png">
       <link rel="icon" type="image/png" sizes="32x32" href="/images/favicons/favicon-32x32.png">
       <link rel="icon" type="image/png" sizes="16x16" href="/images/favicons/favicon-16x16.png">
