More and more changes.

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+      <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; font-src 'self' data: fonts.gstatic.com;"> -->
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="author" content="Juan David Lopez Londono">
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
@@ -17,18 +18,15 @@
       <link rel="icon" type="image/png" sizes="16x16" href="/images/favicons/favicon-16x16.png">
       <!-- <link rel="manifest" href="/images/favicons/site.webmanifest"> -->
       <link rel="mask-icon" href="/images/favicons/safari-pinned-tab.svg" color="#5bbad5">
-      <link rel="shortcut icon" href="/images/favicons/favicon.ico">
+      <!-- <link rel="shortcut icon" href="/images/favicons/favicon.ico" Content-Security-Policy="img-src none" > -->
       <meta name="msapplication-TileColor" content="#da532c">
       <meta name="msapplication-config" content="/images/favicons/browserconfig.xml">
       <meta name="theme-color" content="#1e6c93">
      
       <title>CVUHSD | Staff Portal</title>
-      <link href="/css/font-awesome.min.css" rel="stylesheet" Content-Security-Policy: font-src 'self' data:;>
+      <link href="/css/font-awesome.min.css" rel="stylesheet">
       <link href="/css/grid-system.css" rel="stylesheet">
       <link href="/css/style.css" rel="stylesheet">
-
-      <!-- <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" /> -->
-   
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
