--- a/public/index.html
+++ b/public/index.html
@@ -13,19 +13,19 @@
       <!-- <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet"> -->
       <!-- <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"> -->
       <!-- Favicons --> 
-      <link rel="apple-touch-icon" sizes="180x180" href="/images/favicons/apple-touch-icon.png">
+      <!-- <link rel="apple-touch-icon" sizes="180x180" href="/images/favicons/apple-touch-icon.png">
       <link rel="icon" type="image/png" sizes="32x32" href="/images/favicons/favicon-32x32.png">
-      <link rel="icon" type="image/png" sizes="16x16" href="/images/favicons/favicon-16x16.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="/images/favicons/favicon-16x16.png"> -->
       <!-- <link rel="manifest" href="/images/favicons/site.webmanifest"> -->
-      <link rel="mask-icon" href="/images/favicons/safari-pinned-tab.svg" color="#5bbad5">
+      <!-- <link rel="mask-icon" href="/images/favicons/safari-pinned-tab.svg" color="#5bbad5"> -->
       <!-- <link rel="shortcut icon" href="/images/favicons/favicon.ico" Content-Security-Policy="img-src none" > -->
-      <meta name="msapplication-TileColor" content="#da532c">
-      <meta name="msapplication-config" content="/images/favicons/browserconfig.xml">
+      <!-- <meta name="msapplication-TileColor" content="#da532c">
+      <meta name="msapplication-config" content="/images/favicons/browserconfig.xml"> -->
       <meta name="theme-color" content="#1e6c93">
      
       <title>CVUHSD | Staff Portal</title>
       <link href="/css/font-awesome.min.css" rel="stylesheet">
-      <link href="/css/grid-system.css" rel="stylesheet">
+      <!-- <link href="/css/grid-system.css" rel="stylesheet"> -->
       <link href="/css/style.css" rel="stylesheet">
     <!--
       manifest.json provides metadata used when your web app is installed on a
