--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
       <title>CVUHSD | Staff Portal</title>
       <link href="/css/font-awesome.min.css" rel="stylesheet">
       <!-- <link href="/css/grid-system.css" rel="stylesheet"> -->
+      <link href="/css/css-reset.css" rel="stylesheet">      
       <link href="/css/style.css" rel="stylesheet">
     <!--
       manifest.json provides metadata used when your web app is installed on a
