--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,11 @@
       <meta name="theme-color" content="#1e6c93">
       <link rel="manifest" href="js/staff-manifest.json">
       <title>CVUHSD | Staff Portal</title>
-      <link href="/css/font-awesome.min.css" rel="stylesheet">
+      <!-- <link href="/css/font-awesome.min.css" rel="stylesheet"> -->
       <link href="/css/css-reset.css" rel="stylesheet">      
       <link href="/css/style.css" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"> 
+      
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
