--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,10 @@
       <meta http-equiv="content-type" content="text/html; charset=UTF-8">
       <meta name="description" content="Centinella Valley School District Single Sign-On (SSO) Dashboard">
       <meta name="theme-color" content="#1e6c93">
-      <title>CVUHSD | Staff Portal</title>
+      <title>CVUHSD Portal</title>
       <!-- <link href="/css/font-awesome.min.css" rel="stylesheet"> -->
-      <link href="/css/css-reset.css" rel="stylesheet">      
-      <link href="/css/style.css" rel="stylesheet">
+      <link href="%PUBLIC_URL%/css/css-reset.css" rel="stylesheet">      
+      <link href="%PUBLIC_URL%/css/style.css" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"> 
       
     <!--
