Fix open column button open/close icon not appearing.

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       <title>CVUHSD Portal</title>
       <!-- <link href="/css/font-awesome.min.css" rel="stylesheet"> -->
       <link href="%PUBLIC_URL%/css/css-reset.css" rel="stylesheet">      
-      <link href="%PUBLIC_URL%/css/style.css" rel="stylesheet">
+      <!-- <link href="%PUBLIC_URL%/css/style.css" rel="stylesheet"> -->
       <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"> 
       
     <!--
