--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,12 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="author" content="Juan David Lopez Londono">
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
-      <meta http-equiv="content-language" content="en-us">
       <meta http-equiv="content-type" content="text/html; charset=UTF-8">
       <meta name="description" content="Centinella Valley School District Single Sign-On (SSO) Dashboard">
       <meta name="theme-color" content="#1e6c93">
       <title>CVUHSD Portal</title>
       <!-- <link href="/css/font-awesome.min.css" rel="stylesheet"> -->
-      <link href="%PUBLIC_URL%/css/css-reset.css" rel="stylesheet">      
+      <link href="/css/css-reset.css" rel="stylesheet">      
       <!-- <link href="%PUBLIC_URL%/css/style.css" rel="stylesheet"> -->
       <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"> 
       
@@ -18,7 +17,7 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
