--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       <meta name="theme-color" content="#1e6c93">
       <title>CVUHSD Portal</title>
       <!-- <link href="/css/font-awesome.min.css" rel="stylesheet"> -->
-      <link href="/css/css-reset.css" rel="stylesheet">      
+      <link href="%PUBLIC_URL%/css/css-reset.css" rel="stylesheet">      
       <!-- <link href="%PUBLIC_URL%/css/style.css" rel="stylesheet"> -->
       <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"> 
       
@@ -17,7 +17,7 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
