Attempting to do cofee cup animation. Just use the beans falling into cup for now.

--- a/public/index.html
+++ b/public/index.html
@@ -84,6 +84,11 @@
       /* transition: transform 700ms ease-in-out; */
 
     }
+
+    /* div.coffee-row {
+      position: relative;
+      margin: 0 auto;
+    } */
     </style>
   </head>
   <body>
