Set up logic in App.js componentDidUpdate to switch the favicon upon portal change.

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,10 @@
       <meta http-equiv="content-type" content="text/html; charset=UTF-8">
       <meta name="description" content="Centinella Valley School District Single Sign-On (SSO) Dashboard">
       <meta name="theme-color" content="#1e6c93">
+
       <title>CVUHSD Portal</title>
-      <!-- <link href="/css/font-awesome.min.css" rel="stylesheet"> -->
+      
+      <link rel="shortcut icon" id="favicon" href="./images/CV-600x600-portal-red.png">
       <link href="%PUBLIC_URL%/css/css-reset.css" rel="stylesheet">      
       <link href="%PUBLIC_URL%/css/style.css" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"> 
