--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,11 @@
       <title>CVUHSD Portal</title>
       
       <link rel="shortcut icon" id="favicon" href="./images/CV-600x600-portal-red.png">
-      <link href="%PUBLIC_URL%/css/css-reset.css" rel="stylesheet">      
+      <link href="%PUBLIC_URL%/css/css-reset.css" rel="stylesheet">     
+      <link href="%PUBLIC_URL%/css/bootstrap.min.css" rel="stylesheet"> 
       <link href="%PUBLIC_URL%/css/style.css" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"> 
-      
+      <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;1,400;1,700&display=swap" rel="stylesheet"> 
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
