--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this web application!</noscript>
-    <div id="root"></div>
+    <div id="cvuhsd-portal-app"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
