--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,6 @@
     <noscript>You need to enable JavaScript to run this web application!</noscript>
     <main id="cvuhsd-sso-portal"></main>
     
-    <script type='text/javascript'>  var d=document;s=d.createElement('script');s.type='text/javascript';s.defer=true;s.src='https://ManageEngine.centinela.k12.ca.us:450/scripts/initialize-external-sdpchat.js';t=d.getElementsByTagName('script')[0];t.parentNode.insertBefore(s,t);</script> 							
+    <script type='text/javascript'>  var d=document;s=d.createElement('script');s.type='text/javascript';s.defer=true;s.src='https://cvhelpdesk.centinela.k12.ca.us:450/scripts/initialize-external-sdpchat.js';t=d.getElementsByTagName('script')[0];t.parentNode.insertBefore(s,t);</script> 							
   </body>
 </html>
