Change favicon icons.

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
       <title>CVUHSD Portal</title>
       
-      <link rel="shortcut icon" id="favicon" href="./images/CV-600x600-portal-red.png">
+      <link rel="shortcut icon" id="favicon" href="./images/icons/wp-portal-logo-red-white-interior.ico">
       <link href="%PUBLIC_URL%/css/css-reset.css" rel="stylesheet">     
       <link href="%PUBLIC_URL%/css/bootstrap.min.css" rel="stylesheet"> 
       <link href="%PUBLIC_URL%/css/style.css" rel="stylesheet">
