Add the apple smart banner meta tag, but leave it commented out for now as the WayPoint mobile app is still not yet in the App Store.

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
       <meta name="description" content="Centinella Valley School District Single Sign-On (SSO) Dashboard">
       <meta name="theme-color" content="#1e6c93">
 
+      <!-- Apple Smart Banner -->
+      <!-- <meta name="apple-itunes-app" content="app-id=640199958, app-argument=https://developer.apple.com/wwdc/schedule, affiliate- data=optionalAffiliateData"> -->
+
       <title>CVUHSD Portal</title>
       
       <link href="%PUBLIC_URL%/css/css-reset.css" rel="stylesheet">     
